Changes in Header

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,13 +1,17 @@
-header {
-  background-color: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 25px 10px;
+.header-container {
   box-shadow: 4px 4px 10px 0 rgba($color: #000000, $alpha: 0.05);
-  margin-bottom: 15px;
+  background-color: #fff;
   position: sticky;
   top: 0;
+}
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 25px 0;
+  margin: 0 auto;
+  margin-bottom: 15px;
+  max-width: 900px;
 
   #logo {
     font-size: 25px;
@@ -15,7 +19,7 @@ header {
     font-family: "Dancing Script", cursive;
     font-optical-sizing: auto;
     font-weight: 700;
-    margin-right: 70px;
+    // margin-right: 70px;
 
     a {
       color: #893999 !important;
