header changes - hamburger

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,9 +1,9 @@
 .header-container {
   box-shadow: 4px 4px 10px 0 rgba($color: #000000, $alpha: 0.05);
   background-color: #fff;
-  position: sticky;
-  top: 0;
+  padding: 10px;
 }
+
 header {
   display: flex;
   justify-content: space-between;
@@ -12,9 +12,12 @@ header {
   margin: 0 auto;
   margin-bottom: 15px;
   max-width: 900px;
+  position: sticky;
+  top: 0;
+  z-index: 1 !important;
 
   #logo {
-    font-size: 25px;
+    font-size: 30px;
     color: #893999;
     font-family: "Dancing Script", cursive;
     font-optical-sizing: auto;
@@ -29,6 +32,7 @@ header {
 
   nav {
     display: flex;
+    align-items: baseline;
 
     div {
       margin-right: 15px;
@@ -52,16 +56,23 @@ header {
       left: 0;
       bottom: 0;
       width: 100%;
-      height: 2px;
+      height: 1.5px;
       background-color: #893999;
       transform: scaleX(0);
       transform-origin: bottom right;
-      transition: all 0.25s ease;
+      transition: all 0.45s ease;
     }
 
     div:hover::after {
       transform: scaleX(1);
       transform-origin: bottom left;
+    }
+  }
+
+  #menu {
+    .menu {
+      display: none;
+      cursor: pointer;
     }
   }
 
@@ -74,5 +85,58 @@ header {
       color: #893999 !important;
       text-decoration: underline;
     }
+  }
+}
+
+.hamburger-menu {
+  // display: none;
+}
+
+@media only screen and (max-width: 760px) {
+  header {
+    padding: 15px 0;
+
+    nav {
+      display: none;
+    }
+
+    #logo {
+      font-size: 25px;
+      font-weight: 700;
+    }
+
+    #menu {
+      .menu {
+        width: 25px;
+        cursor: pointer;
+        display: block;
+        margin-left: 10px;
+      }
+    }
+  }
+  .hamburger-menu {
+    position: relative;
+    z-index: -1 !important;
+    // display: block;
+    padding: 10px;
+    text-align: center;
+    height: 0;
+    opacity: 0;
+    transform: translateY(-300px);
+    transition: all 0.25s ease-out;
+
+    div {
+      margin-bottom: 10px;
+
+      a {
+        text-decoration: none;
+      }
+    }
+  }
+
+  .hamburger-menu.nav-show {
+    height: 100px;
+    opacity: 1;
+    transform: translateY(0);
   }
 }
