--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -2,6 +2,9 @@
   box-shadow: 4px 4px 10px 0 rgba($color: #000000, $alpha: 0.05);
   background-color: #fff;
   padding: 10px;
+  position: sticky;
+  z-index: 2 !important;
+  top: 0;
 }
 
 header {
@@ -12,9 +15,6 @@ header {
   margin: 0 auto;
   margin-bottom: 15px;
   max-width: 900px;
-  position: sticky;
-  top: 0;
-  z-index: 1 !important;
 
   #logo {
     font-size: 30px;
@@ -89,7 +89,7 @@ header {
 }
 
 .hamburger-menu {
-  // display: none;
+  display: none;
 }
 
 @media only screen and (max-width: 760px) {
@@ -115,9 +115,11 @@ header {
     }
   }
   .hamburger-menu {
-    position: relative;
-    z-index: -1 !important;
-    // display: block;
+    position: sticky;
+    z-index: 1 !important;
+    background-color: white;
+    top: 95px;
+    display: block;
     padding: 10px;
     text-align: center;
     height: 0;
