--- a/src/components/ScrollToTop/scrollToTop.scss
+++ b/src/components/ScrollToTop/scrollToTop.scss
@@ -6,8 +6,10 @@
   right: 40px;
   transform: scale(1);
   transition: transform 0.25s ease;
+  outline: none;
   img {
     width: 55px;
+    outline: none;
   }
 }
 
