--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -28,6 +28,7 @@
         top: 0;
         transition: all 0.25s ease;
         flex: 1 1 250px;
+        -webkit-tap-highlight-color: transparent;
       }
 
       #card:hover {
@@ -69,6 +70,7 @@
           top: 0;
           transition: all 0.25s ease;
           flex: 1 1 250px;
+          -webkit-tap-highlight-color: transparent;
         }
 
         #card:hover {
