--- a/src/components/ScrollToTop/scrollToTop.scss
+++ b/src/components/ScrollToTop/scrollToTop.scss
@@ -6,10 +6,9 @@
   right: 40px;
   transform: scale(1);
   transition: transform 0.25s ease;
-  outline: none;
+  -webkit-tap-highlight-color: transparent;
   img {
     width: 55px;
-    outline: none;
   }
 }
 
