added private limited

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -17,6 +17,8 @@ header {
   max-width: 900px;
 
   #logo {
+    width: fit-content;
+    text-align: center;
     font-size: 30px;
     color: #893999;
     font-family: "Dancing Script", cursive;
