--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Karla", sans-serif;
+  font-family: "Karla", sans-serif !important;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
