--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -1,7 +1,9 @@
 .footer {
   padding: 30px 0;
   text-align: center;
-  box-shadow: 4px 4px 10px 0 rgba($color: #fbf9f9, $alpha: 0.05);
+  // box-shadow: 4px 4px 10px 0 rgba($color: #fbf9f9, $alpha: 0.05);
+  box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px,
+    rgba(17, 17, 26, 0.1) 0px 0px 8px;
   p {
     margin: 0;
   }
