--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,5 +1,7 @@
 .header-container {
-  box-shadow: 4px 4px 10px 0 rgba($color: #000000, $alpha: 0.05);
+  // box-shadow: 4px 4px 10px 0 rgba($color: #000000, $alpha: 0.05);
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
   background-color: #fff;
   padding: 10px;
   position: sticky;
@@ -100,7 +102,7 @@ header {
   display: none;
 }
 
-@media only screen and (max-width: 760px) {
+@media only screen and (max-width: 795px) {
   header {
     padding: 15px 0;
 
@@ -127,9 +129,9 @@ header {
     position: sticky;
     z-index: 1 !important;
     background-color: white;
-    top: 124px;
+    top: 122px;
     display: block;
-    padding: 10px;
+    // padding: 10px;
     text-align: center;
     height: 0;
     opacity: 0;
@@ -144,10 +146,13 @@ header {
         text-decoration: none;
       }
     }
+    .home-nav {
+      padding-top: 8px;
+    }
   }
 
   .hamburger-menu.nav-show {
-    height: 100px;
+    height: 175px;
     opacity: 1;
     transform: translateY(0);
   }
