--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -17,6 +17,7 @@
         margin-bottom: 50px;
         font-size: 40px;
         font-weight: 800;
+        line-height: 1.5;
         .your {
           border-radius: 10px;
           box-shadow: 0px 1px 2px 0px rgba(137, 57, 153, 0.7),
@@ -37,7 +38,7 @@
 
   .inner-section-two {
     // background-color: #232932;
-    padding: 150px 0px 200px 0;
+    padding: 50px 0px 50px 0;
     .inner-div-two {
       max-width: 900px;
       margin: auto;
@@ -72,6 +73,31 @@
           font-weight: 700;
           font-size: 17px;
         }
+      }
+    }
+  }
+}
+.home-number-section {
+  .home-number-div {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    list-style-position: inside;
+    padding: 0;
+    margin: auto;
+    margin-top: 100px;
+    div {
+      background-color: white;
+      padding: 30px 60px;
+      color: #232932;
+      margin: 20px 20px;
+      // flex: 1 1 250px;
+      border-radius: 15px;
+      box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+      font-weight: 700;
+      font-size: 17px;
+      p {
+        text-align: center;
       }
     }
   }
