--- a/src/components/Services/services.scss
+++ b/src/components/Services/services.scss
@@ -1,9 +1,13 @@
-.services {
+#services.services {
   width: 90%;
   margin: auto;
   margin-top: 50px;
   margin-bottom: 50px;
   font-family: inherit !important;
+
+  div.ant-collapse {
+    font-family: inherit !important;
+  }
 
   .ant-collapse-content-box {
     text-align: justify;
