--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -45,6 +45,8 @@
     color: white;
     font-size: 14px;
     font-weight: bolder;
+    padding-left: 5px;
+    padding-right: 5px;
   }
 
   .footer-links {
@@ -56,6 +58,7 @@
       margin: 20px auto;
       padding-left: 20px;
       padding-right: 20px;
+      justify-content: center;
     }
   }
 }
