--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -86,18 +86,24 @@
     padding: 0;
     margin: auto;
     margin-top: 100px;
-    div {
+    div.in {
       background-color: white;
-      padding: 30px 60px;
+      // padding: 30px 60px;
       color: #232932;
       margin: 20px 20px;
+      border-radius: 50%;
+      width: 250px;
+      height: 250px;
       // flex: 1 1 250px;
-      border-radius: 15px;
       box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
       font-weight: 700;
       font-size: 17px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       p {
         text-align: center;
+        font-weight: 500;
       }
     }
   }
