--- a/src/components/JoinHeader/joinHeader.scss
+++ b/src/components/JoinHeader/joinHeader.scss
@@ -2,6 +2,10 @@
   background-color: rgb(137, 57, 153);
   color: white;
   text-align: center;
+  padding-left: 5px;
+  padding-right: 5px;
+  position: relative;
+  z-index: 2 !important;
   p {
     margin: 0;
     line-height: 1.7;
@@ -18,6 +22,6 @@
 
 @media only screen and (max-width: 795px) {
   .join-header {
-    display: none;
+    // display: none;
   }
 }
