--- a/src/components/ScrollToTop/scrollToTop.scss
+++ b/src/components/ScrollToTop/scrollToTop.scss
@@ -4,6 +4,7 @@
   position: fixed;
   top: 80%;
   right: 40px;
+  z-index: 100;
   transform: scale(1);
   transition: transform 0.25s ease;
   -webkit-tap-highlight-color: transparent;
