--- a/src/components/JoinHeader/joinHeader.scss
+++ b/src/components/JoinHeader/joinHeader.scss
@@ -21,7 +21,7 @@
 }
 
 @media only screen and (max-width: 795px) {
-  .join-header {
-    // display: none;
-  }
+  // .join-header {
+  // display: none;
+  // }
 }
