--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -88,8 +88,10 @@
     margin-top: 100px;
     div.in {
       background-color: white;
+      // background-color: #232932;
       // padding: 30px 60px;
       color: #232932;
+      // color: #fff;
       margin: 20px 20px;
       border-radius: 50%;
       width: 250px;
