--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -53,6 +53,7 @@ header {
         text-decoration: none;
         color: #232932;
         transition: all 0.25s ease;
+        font-size: 17px;
       }
 
       a:hover {
@@ -102,7 +103,7 @@ header {
   display: none;
 }
 
-@media only screen and (max-width: 795px) {
+@media only screen and (max-width: 824px) {
   header {
     padding: 15px 0;
 
