--- a/src/components/JoinHeader/joinHeader.scss
+++ b/src/components/JoinHeader/joinHeader.scss
@@ -1,5 +1,6 @@
 .join-header {
   background-color: rgb(137, 57, 153);
+  // background-color: #232932;
   color: white;
   text-align: center;
   padding-left: 5px;
@@ -10,8 +11,10 @@
     margin: 0;
     line-height: 1.7;
     a {
-      color: rgb(44, 34, 46);
-      text-decoration: none;
+      // color: rgb(30, 18, 32);
+      text-decoration: underline;
+      color: whitesmoke;
+
       transition: color 0.3s;
     }
     a:hover {
