--- a/src/components/JoinUs/joinUs.scss
+++ b/src/components/JoinUs/joinUs.scss
@@ -34,6 +34,23 @@ textarea {
   box-sizing: border-box;
 }
 
+.react-tel-input.mobile {
+  margin-bottom: 20px;
+}
+
+.react-tel-input.mobile .form-control {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 20px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+  box-sizing: border-box;
+  height: auto;
+  padding-left: 48px;
+  line-height: normal;
+}
+
 button {
   width: 100%;
   padding: 12px;
